--- a/form_count_link.html
+++ b/form_count_link.html
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
-        <span class="help-block">NOTHING ACTUALLY</span><br/>
+        <!-- <span class="help-block">NOTHING ACTUALLY</span><br/> -->
       </div>
       <div class="col-md-3"></div>
     </div>
@@ -27,7 +27,7 @@
       <fieldset>
         <!-- Text input-->
         <div class="form-group">
-          <label class="col-md-4 control-label" for="website">website</label>
+          <label class="col-md-4 control-label" for="website">Website</label>
           <div class="col-md-5">
             <input id="website" name="website" placeholder="Write here your website" class="form-control input-md" required="" type="text">
           </div>
@@ -64,7 +64,7 @@
           <label class="col-md-4 control-label" for="captcha">Captcha</label>
           <div class="col-md-4">
             <!-- Change data-sitekey with public key of your api google-->
-            <div class="g-recaptcha" data-sitekey="6LeLTSQUAAAAAALRd7cSQkGyiWfBVmq5QehBTKf_"></div>
+            <div class="g-recaptcha" name='captcha' data-sitekey="6LeLTSQUAAAAAALRd7cSQkGyiWfBVmq5QehBTKf_"></div>
           </div>
         </div>
         <!-- Button -->
@@ -134,4 +134,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="count_link.js"></script>
   </body>
-</html>ss
+</html>
